name:                global-lock
version:             0.1
license:             BSD3
license-file:        LICENSE
synopsis:            FIXME
category:            FIXME
author:              Keegan McAllister <mcallister.keegan@gmail.com>
maintainer:          Keegan McAllister <mcallister.keegan@gmail.com>
build-type:          Simple
cabal-version:       >=1.6
description:
    FIXME

extra-source-files:
    README
  , test/counter.hs
  , test/bench.hs

library
  exposed-modules:
      System.GlobalLock
    , System.GlobalLock.Internal

  c-sources:
      cbits/global.c

  ghc-options: -Wall
  build-depends:
      base >= 3 && < 5

  other-extensions:
      ForeignFunctionInterface

source-repository head
    type:     git
    location: git://github.com/kmcallister/global-lock
